SRC/objects/Districts__c.object
<CustomObject>
    <fields>
        <fullName>District_Pin_Code__c</fullName>
        <label>District Pin Code</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Identification__c</fullName>
        <formula>HYPERLINK( State_Name__r.Country__c ,  State_Name__r.Country__r.Name ,&quot;_blank&quot;) + &quot;=&gt;&quot; +  HYPERLINK( State_Name__c ,  State_Name__r.Name ,&quot;_blank&quot;) + &quot;=&gt;&quot; + Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Identification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State Name</label>
        <referenceTo>States__c</referenceTo>
        <relationshipLabel>Districts</relationshipLabel>
        <relationshipName>Districts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Districts</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Districts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Districts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>